samples/_failures_safe/1761491265_7b0fa6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52f41a7a.c: In function ‘main’:
./samples/SAFE/__tmp_52f41a7a.c:145:5: error: expected declaration or statement at end of input
  145 |     printf("\n");
      |     ^~~~~~
